add cat reservations api
