# src/app/docs/swagger.yaml
@@ -10,6 +10,8 @@ definitions:
         type: integer
       contract_days:
         type: integer
+      deposit:
+        type: integer
       id:
         type: integer
       level:
@@ -208,6 +210,11 @@ paths:
         name: price
         required: true
         type: string
+      - description: 貓的押金
+        in: formData
+        name: deposit
+        required: true
+        type: string
       - description: 貓的pet幣
         in: formData
         name: pet_coin
@@ -233,6 +240,40 @@ paths:
         name: contract_benefit
         required: true
         type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Message'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+            type: object
+  /api/v1/cat/reservation:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Add a new cat_user_reservation
+      parameters:
+      - description: 貓的ID識別
+        in: formData
+        name: cat_id
+        required: true
+        type: integer
+      - description: 時段的ID識別
+        in: formData
+        name: time_schedule_id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -379,6 +420,11 @@ paths:
         name: price
         required: true
         type: string
+      - description: 貓的押金
+        in: formData
+        name: deposit
+        required: true
+        type: string
       - description: 貓的pet幣
         in: formData
         name: pet_coin
@@ -495,7 +541,7 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
   /api/v1/thumbnails/{thumbnailId}/cats/{catId}:
-    put:
+    post:
       consumes:
       - application/json
       description: link cat thumbnail with cat to the database
@@ -674,6 +720,29 @@ paths:
         name: password
         required: true
         type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Message'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+            type: object
+  /api/v1/user/logout:
+    post:
+      consumes:
+      - multipart/form-data
+      description: user account logout
       produces:
       - application/json
       responses:
